[package]
name = "test-es"
version = "0.1.0"
authors = ["Meghashyam Sandeep Vakacharla <svakacharla@fanatics.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elasticsearch = "7.9.0-alpha.1"
tokio = { version = "0.2.8", features = ["full"] }
